--- a/package.json
+++ b/package.json
@@ -2,10 +2,20 @@
   "name": "rout",
   "private": true,
   "dependencies": {
+    "@fullcalendar/core": "^5.5.1",
+    "@fullcalendar/daygrid": "^5.5.0",
+    "@fullcalendar/interaction": "^5.5.0",
+    "@fullcalendar/list": "^5.5.0",
+    "@fullcalendar/timegrid": "^5.5.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "chart.js": "^2.9.4",
+    "chartkick": "^3.2.1",
+    "fullcalendar": "^5.5.1",
+    "jquery": "^3.5.1",
+    "moment": "^2.29.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
