--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fullcalendar/interaction": "^5.5.0",
     "@fullcalendar/list": "^5.5.0",
     "@fullcalendar/timegrid": "^5.5.1",
+    "@popperjs/core": "^2.9.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -20,6 +21,7 @@
     "jquery": "^3.5.1",
     "jquery-ujs": "^1.2.2",
     "moment": "^2.29.1",
+    "tippy.js": "^6.3.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
