--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,4 @@
-default: &default
+default: 
   adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
@@ -8,8 +8,16 @@ default: &default
   password: r123
 
 development:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: rout
+  password: r123
   database: rout
 
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: rout
+  password: r123
