--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@ development:
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: rout
+  # username: rout
   password: r123
   database: rout
 
